# cargo-bay

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cliff.toml
.github/workflows/: release.yml  rust.yml
src/: cli.rs  discover.rs  job.rs  main.rs  theme.rs  ui.rs
